--- a/2025_escola/package.json
+++ b/2025_escola/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
   }
